--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^5.6.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.7.0",
+    "gatsby-plugin-manifest": "^5.8.0",
     "gatsby-plugin-mdx": "^5.7.0",
     "gatsby-plugin-react-helmet": "^6.7.0",
     "gatsby-plugin-sharp": "^5.7.0",
@@ -35,4 +36,3 @@
     "prop-types": "^15.8.1"
   }
 }
-
